# GRUB-BOT

./: .gitignore  README.md  grubbot.txt  implementation_plan.md  pyproject.toml
examples/: goal.md  tools.yaml
grubbot/: __init__.py  cli.py  cluster.py  config.py  datagen.py  eval.py  finetune.py  loop.py  pipeline.py
grubbot/providers/: __init__.py  base.py  gemini.py  groq.py  ollama.py
tests/: test_cluster.py  test_config.py  test_datagen.py  test_eval.py
